--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "telegram-payment-bot",
+  "name": "server",
   "version": "1.0.0",
-  "private": true,
-  "type": "module",
+  "main": "mockserver.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "grammy": "^1.20.3",
-    "dotenv": "^16.3.1"
+    "express": "^5.1.0"
   }
 }
